add blue marble board - closes #6006

--- a/ui/dasher/css/_board.scss
+++ b/ui/dasher/css/_board.scss
@@ -36,6 +36,9 @@
     .blue2 {
       background-image: url(../images/board/blue2.thumbnail.jpg);
     }
+    .blue-marble {
+      background-image: url(../images/board/blue-marble.thumbnail.jpg);
+    }
     .wood2 {
       background-image: url(../images/board/wood2.thumbnail.jpg);
     }
