make perf keys translatable; only rapid & classical for now

--- a/ui/site/css/user/_sub-rating.scss
+++ b/ui/site/css/user/_sub-rating.scss
@@ -63,6 +63,7 @@
   h3 {
     @extend %roboto;
     font-size: 1.1em;
+    text-transform: uppercase;
     letter-spacing: .05em;
     margin: 0;
     display: inline-block;
