Shortcut 'o' jumps to current game position

--- a/app/views/analyse/help.scala.html
+++ b/app/views/analyse/help.scala.html
@@ -35,6 +35,7 @@
     @row(List(k("shift"), k("J"), or, k("shift"), k("K")), trans.keyEnterOrExitVariation.txt())
     @row(List(k("ctrl"), k("1"), to, k("9")), "Bookmark position")
     @row(List(k("1"), to, k("9")), "Jump to bookmarked position")
+    @row(List(k("o")), "Jump to current game position")
     @header("Analysis options")
     @row(List(k("shift"), k("I")), trans.inlineNotation.txt())
     @row(List(k("l")), "Toggle local computer analysis")
