Call resize immediately on embedded chapter change

--- a/app/views/site/developers.scala.html
+++ b/app/views/site/developers.scala.html
@@ -27,7 +27,7 @@
   <h1 id="embed-tv" class="lidraughts_title">Embed the Draughts TV in your site</h1>
 
   <div style="text-align: center;">
-    <script src="//@netDomain/tv/embed?theme=maple&bg=light"></script>
+    <script src="@netBaseUrl/tv/embed?theme=maple&bg=light"></script>
   </div>
 
   <p>
@@ -51,7 +51,7 @@
   <h1 id="embed-puzzle" class="lidraughts_title">Embed the daily puzzle in your site</h1>
 
   <div style="text-align: center;">
-    <script src="//@netDomain/training/embed?theme=maple&bg=auto"></script>
+    <script src="@netBaseUrl/training/embed?theme=maple&bg=auto"></script>
   </div>
 
   <p>
@@ -79,7 +79,7 @@
   <h1 id="embed-study" class="lidraughts_title">Embed a draughts analysis in your site</h1>
 
   <div style="text-align: center;">
-    <iframe width=530 height=353 src="https://lidraughts.org/study/embed/xGDc4tlJ/AqJhrQbk?bg=auto&theme=auto"
+    <iframe width=530 height=353 src="@netBaseUrl/study/embed/xGDc4tlJ/AqJhrQbk?bg=auto&theme=auto"
       frameborder=0 style="margin-bottom:1em"></iframe>
   </div>
 
@@ -111,7 +111,7 @@ src="https://lidraughts.org/study/embed/xGDc4tlJ/AqJhrQbk?theme=auto&bg=auto"
   <h1 id="embed-study" class="lidraughts_title">Embed interactive lessons in your site</h1>
 
   <div style="text-align: center;">
-    <iframe width=530 height=353 src="https://lidraughts.org/study/embed/vxL8cJ67/fh6Ycb8X?next=true&bg=auto&theme=auto"
+    <iframe width=530 height=353 src="@netBaseUrl/study/embed/vxL8cJ67/fh6Ycb8X?next=true&bg=auto&theme=auto"
             frameborder=0 style="margin-bottom:1em"></iframe>
   </div>
 
@@ -144,7 +144,7 @@ src="https://lidraughts.org/study/embed/vxL8cJ67/fh6Ycb8X?next=true"
   <h1 id="embed-game" class="lidraughts_title">Embed a draughts game in your site</h1>
 
   <div style="text-align: center;">
-    <iframe width=530 height=353 src="https://lidraughts.org/embed/JLuuVBv5?bg=auto&theme=auto"
+    <iframe width=530 height=353 src="@netBaseUrl/embed/JLuuVBv5?bg=auto&theme=auto"
       frameborder=0 style="margin-bottom:1em"></iframe>
   </div>
 
