Make puzzle storm work

--- a/ui/storm/css/_play.scss
+++ b/ui/storm/css/_play.scss
@@ -22,6 +22,12 @@
         'board   hand-top'
         'board   side'
         'board   hand-bot';
+      .board-layout-1 & {
+        grid-column-gap: 0;
+        grid-template-columns: $square-9 $hand-gap $col2-uniboard-width $hand-gap $square-9 $gauge-gap $col3-uniboard-table-no-hands;
+        grid-template-areas:
+        'hand-top . board . hand-bot . side'
+      }
     }
   }
 }
