--- a/ui/common/css/abstract/_extends.scss
+++ b/ui/common/css/abstract/_extends.scss
@@ -159,6 +159,10 @@
 %box-padding-horiz {
   padding: 0 var(--box-padding);
 }
+%box-margin-horiz {
+  margin-left: var(--box-padding);
+  margin-right: var(--box-padding);
+}
 
 %break-word {
   overflow-wrap: break-word;
