Fix study embeds on mobile again - closes #12311
Originally fixed in #9455 but regressed in ebed99696649f22fb53ba0a13341de8716f7d386

--- a/ui/site/css/_blog.scss
+++ b/ui/site/css/_blog.scss
@@ -133,11 +133,11 @@
     .embed {
       @extend %video;
 
-      &--game {
-        @extend %game-embed;
-      }
-
       margin: $block-gap auto;
+
+      &--study {
+        @extend %study-embed;
+      }
     }
   }
 
