Prepare to add study button to game view

--- a/ui/round/css/_control.scss
+++ b/ui/round/css/_control.scss
@@ -230,3 +230,14 @@
     }
   }
 }
+
+#modal-overlay {
+  .study-options {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    button {
+      width: 100%;
+    }
+  }
+}
