--- a/ui/storm/css/_play.scss
+++ b/ui/storm/css/_play.scss
@@ -25,8 +25,7 @@
       .board-layout-1 & {
         grid-column-gap: 0;
         grid-template-columns: $square-9 $hand-gap $col2-uniboard-width $hand-gap $square-9 $gauge-gap $col3-uniboard-table-no-hands;
-        grid-template-areas:
-        'hand-top . board . hand-bot . side'
+        grid-template-areas: 'hand-top . board . hand-bot . side';
       }
     }
   }
