Updated fix for issue whereby stream language is obscured by live banner

--- a/ui/site/css/streamer/_header.scss
+++ b/ui/site/css/streamer/_header.scss
@@ -128,3 +128,9 @@
   align-self: flex-start;
   z-index: 2;
 }
+
+.streamer-language {
+  display: inline;
+  margin: 0 1em 0 1em;
+  width: 30%;
+}
