detect blanked password and tell the user to reset

--- a/ui/site/css/_auth.scss
+++ b/ui/site/css/_auth.scss
@@ -34,6 +34,14 @@
       cursor: pointer;
       user-select: none;
     }
+
+    &__blanked {
+      @extend %box-radius;
+      margin: 1em 0 2em 0;
+      padding: 1em 2em;
+      background: $c-bg-zebra;
+      border: 2px solid $c-bad;
+    }
   }
 
   .agreement label {
