--- a/ui/input/css/_keyboardMove.scss
+++ b/ui/input/css/_keyboardMove.scss
@@ -37,4 +37,22 @@
 
 #voice-move-button.enabled {
   color: red;
+  border-width: 0 1px 0 1px;
+  border-radius: 0.25em;
+  border-style: solid;
+  border-color: red;
+  animation: pulseBorderRed 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes pulseBorderRed {
+  0% {
+    border-color: transparent;
+  }
+  50% {
+    border-color: red;
+  }
+  100% {
+    border-color: transparent;
+  }
 }
