--- a/ui/puzzle/css/_layout.scss
+++ b/ui/puzzle/css/_layout.scss
@@ -50,11 +50,11 @@
     grid-area: gauge;
   }
 
-  .keyboard-move {
-    grid-area: kb-move;
+  .input-move {
+    grid-area: input-move;
   }
 
-  grid-template-areas: 'board' 'controls' 'tools' 'session' 'kb-move' 'side';
+  grid-template-areas: 'board' 'controls' 'tools' 'session' 'input-move' 'side';
   grid-row-gap: $block-gap;
 
   &__moves {
@@ -67,7 +67,7 @@
     grid-template-areas:
       'board   gauge tools'
       'session .     controls'
-      'kb-move .     controls'
+      'input-move .     controls'
       'side    side  side';
 
     &__moves {
@@ -79,7 +79,7 @@
     grid-template-areas:
       'side    . board   gauge tools'
       'side    . session .     controls'
-      'side    . kb-move .     controls'
+      'side    . input-move .     controls'
       'side    . .       .     .';
     grid-template-columns: $col3-uniboard-side $block-gap $col3-uniboard-width var(--gauge-gap) $col3-uniboard-table;
   }
