--- a/ui/round/css/_table.scss
+++ b/ui/round/css/_table.scss
@@ -8,6 +8,11 @@
   .draw-yes span {
     font-size: 1.2em;
   }
+  div.input-move {
+    background-color: transparent;
+    border-bottom: 0;
+    padding: 0;
+  }
 }
 
 .expiration {
