Add box neat bottom

--- a/ui/common/css/abstract/_box.scss
+++ b/ui/common/css/abstract/_box.scss
@@ -38,6 +38,9 @@
 %box-neat-top {
   @extend %box-shadow, %box-radius-top;
 }
+%box-neat-bottom {
+  @extend %box-shadow, %box-radius-bottom;
+}
 %box-neat-force {
   @extend %box-shadow, %box-radius-force;
 }
