--- a/ui/analyse/css/study/_game.scss
+++ b/ui/analyse/css/study/_game.scss
@@ -1,6 +1,7 @@
 .post-game {
   .study__side {
-    .study__members, .study__chapters {
+    .study__members,
+    .study__chapters {
       border-radius: 0;
       box-shadow: none;
     }
