--- a/ui/analyse/css/study/_player.scss
+++ b/ui/analyse/css/study/_player.scss
@@ -6,7 +6,7 @@ $player-height: 1.6rem;
   }
   @include breakpoint($mq-col2) {
     .analyse__underboard {
-      margin-top: calc(#{$player-height / 2} + #{$block-gap / 2});
+      margin-top: $player-height;
     }
   }
   @include breakpoint($mq-col1) {
