Move streamer langauge out of the live ribbon - closes #12339

--- a/ui/site/css/streamer/_header.scss
+++ b/ui/site/css/streamer/_header.scss
@@ -128,3 +128,11 @@
   align-self: flex-start;
   z-index: 2;
 }
+
+.live .streamer-lang {
+  margin-#{$end-direction}: 100px;
+
+  @include breakpoint($mq-not-xx-small) {
+    margin-#{$end-direction}: 50px;
+  }
+}
