show the moretime button on 420px+ screens - closes #12468

--- a/ui/round/css/_clock.scss
+++ b/ui/round/css/_clock.scss
@@ -189,7 +189,7 @@
 
     display: none;
 
-    @include breakpoint($mq-xx-small) {
+    @include breakpoint(420px) {
       order: -1;
       display: flex;
       flex: 0 1 auto;
