Fixed the css, instead of changing form control without condition, now we change width if only if we want to add clipboard

--- a/ui/common/css/form/_form3.scss
+++ b/ui/common/css/form/_form3.scss
@@ -36,7 +36,7 @@
 
 .form-control {
   display: block;
-  width: 95%;
+  width: 100%;
   height: calc(2.7em + 2px);
   background-clip: padding-box;
 }
@@ -44,6 +44,10 @@
 .form-control-with-clipboard {
   display: inline-flex;
   width: 100%;
+}
+
+.form-control-with-clipboard > .form-control {
+  width: 95%;
 }
 
 .clipboard {
