--- a/ui/round/css/_app-layout.scss
+++ b/ui/round/css/_app-layout.scss
@@ -67,10 +67,6 @@
       box-shadow: none;
     }
 
-    .expiration-top {
-      display: none;
-    }
-
     &__table {
       display: none;
     }
@@ -116,5 +112,18 @@
 
   &__board {
     grid-area: board;
+  }
+}
+
+.round__app__expi_top {
+  display: grid;
+
+  @include breakpoint($mq-col1) {
+    grid-template-rows: auto auto $col1-user-height $col1-mat-height auto auto auto $col1-mat-height $col1-user-height auto;
+    grid-template-areas: 'moves' 'pocket-top' 'user-top' 'mat-top' 'expi-top' 'board' 'expi-bot' 'mat-bot' 'user-bot' 'pocket-bot' 'kb-move' 'controls';
+
+    .rclock-bottom {
+      grid-area: 8 / 1 / 10 / 2;
+    }
   }
 }
